# OpenCvAndroid

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dex/opencvlearn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jniLearn.cpp  native-lib.cpp
app/src/main/java/com/dex/opencvlearn/: JniHandler.java  JniLearnAct.java  MainActivity.java  OpenCvActivity.java
app/src/main/res/layout/: activity_jni_learn.xml  activity_main.xml  activity_open_cv.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dex/opencvlearn/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
